--- a/weather/src/styles/globals.css
+++ b/weather/src/styles/globals.css
@@ -8,8 +8,8 @@
   top: -45px;
   width: 50px;
   height: 50px;
-  background-color: #f3f4f6;
-  box-shadow: 0 133px #f3f4f6;
+  background-color: #e8e9e9;
+  box-shadow: 0 133px#e8e9e9;
 }
 
 .logo-corner::before {
